--- a/dev/app/features/home/section0.view.html
+++ b/dev/app/features/home/section0.view.html
@@ -3,10 +3,9 @@
 
     <div class="width1024">
         <div class="redes">
-            <a href="https://www.instagram.com/nequipanama/" target="_blanck"><img class="logoRedes" alt="" ng-src="{{vm.pathname}}img/home/icono_instagram.svg"></a>
-            <a href="https://www.youtube.com/channel/UCtdpoTH0054MSAt6iqkMiFw" target="_blanck"><img class="logoRedes" alt="" ng-src="{{vm.pathname}}img/home/icono_youtube.svg"></a>
-            <a href="https://www.facebook.com/NequiPanama/" target="_blanck"><img class="logoRedes" alt="" ng-src="{{vm.pathname}}img/home/icono_facebook.svg"></a>
-            
+            <a href="https://www.instagram.com/jose.david.alca/" target="_blanck"><img class="logoRedes" alt="" ng-src="{{vm.pathname}}img/home/icono_instagram.svg"></a>
+            <a href="https://www.youtube.com/channel/UC4jqysBI91MdThb1MbZl3DQ" target="_blanck"><img class="logoRedes" alt="" ng-src="{{vm.pathname}}img/home/icono_youtube.svg"></a>
+            <a href="https://www.facebook.com/josedavid.alcaraz.35" target="_blanck"><img class="logoRedes" alt="" ng-src="{{vm.pathname}}img/home/icono_facebook.svg"></a>  
         </div>
         <div class="row">
             <div class="col-md-5 col-sm-12">
@@ -24,7 +23,7 @@
                 <div class="clear"></div>
                 <div class="clear"></div>
                 <p class="fontLato fontSize16 lineHeight24 cBlue1">
-                     An electronic engineer who loves software, music, illustration, sports and astronomy. 
+                     An electronic engineer who loves software, music, illustration, sports and astronomy. I currently work in Pragma S.A. and welcome to this part of my things :)
                 </p>
                 <div class="clear"></div>
                 <div class="clear"></div>
