--- a/dev/app/features/home/section2.view.html
+++ b/dev/app/features/home/section2.view.html
@@ -6,14 +6,14 @@
                     <!-- slide 1-->
                     <div>
                         <div class="row">
-                            <div class="col-md-5 col-md-push-7 col-sm-12">
+                            <div class="col-md-7 col-md-push-5 col-sm-12">
                                 <div class="clearFive "></div>
                                 <div class="clearFive "></div>
                                 <div class="clearFive hidden-lg hidden-md "></div>
                                 <div class="clearFive hidden-lg hidden-md "></div>
-                                <div class="widthAnimaciones" id="animacion1Premio"></div>
+                                <img alt="" class="prevI" ng-src="{{vm.pathname}}img/illus/evo1.png">
                             </div>
-                            <div class="col-md-7 col-md-pull-5  col-sm-12 textLeft">
+                            <div class="col-md-5 col-md-pull-7  col-sm-12 textLeft">
                                 <div class="clearFive hidden-sm hidden-xs"></div>
                                 <div class="clearFive hidden-sm hidden-xs"></div>
                                 <div class="clearFive hidden-sm hidden-xs"></div>
@@ -22,14 +22,14 @@
                                 <div class="clearFive "></div>
                                 <div class="textHome">
                                     <p class="fontAvenirNextLTProBold cMoradoOscuro  fontSize40 lineHeight50">
-                                         Ver a tu Sele en Rusia ¡¡¡con un acompañante!!!
+                                         EVO - Evolution to DevOps
                                     </p>
                                 </div>
                                 <div class="clear"></div>
                                 <div class="clear"></div>
                                 <p class="fontLato fontSize16 lineHeight24 cMorado">
-                                    Te llevaremos al primer partido de nuestra Sele para que vivas esa emoción en vivo y en directo. Además, podrás ir con la
-                                    persona que quieras disfrutar el premio ¡y gritar hasta que se queden sin voz!
+                                    A few months ago Bancolombia wanted to create a gamification concept for the employees based on DevOps knowledge distribution and then Evo came up :) 
+                                    <br> So each proyect has his own planet, each area of the project is a continent, and each team has his own crazy spaceship.   
                                 </p>
                                 <div class="clear"></div>
                                 <div class="clear"></div>
@@ -39,14 +39,14 @@
                     <!-- slide 2-->
                     <div>
                         <div class="row">
-                            <div class="col-md-5 col-md-push-7 col-sm-12">
+                            <div class="col-md-7 col-md-push-5 col-sm-12">
                                 <div class="clearFive "></div>
                                 <div class="clearFive "></div>
                                 <div class="clearFive hidden-lg hidden-md "></div>
                                 <div class="clearFive hidden-lg hidden-md "></div>
-                                <img alt="" class="imgPaso2 imgMobile" ng-src="{{vm.pathname}}img/internas/imagen_camiseta.png">
+                                <img alt="" class="prevI" ng-src="{{vm.pathname}}img/illus/evo3.png">
                             </div>
-                            <div class="col-md-7 col-md-pull-5  col-sm-12 textLeft">
+                            <div class="col-md-5 col-md-pull-7  col-sm-12 textLeft">
                                 <div class="clearFive hidden-sm hidden-xs"></div>
                                 <div class="clearFive hidden-sm hidden-xs"></div>
                                 <div class="clearFive hidden-sm hidden-xs"></div>
@@ -55,14 +55,13 @@
                                 <div class="clearFive "></div>
                                 <div class="textHome">
                                     <p class="fontAvenirNextLTProBold cMoradoOscuro  fontSize40 lineHeight50">
-                                        Camiseta de la sele
+                                            EVO - Evolution to DevOps
                                     </p>
                                 </div>
                                 <div class="clear"></div>
                                 <div class="clear"></div>
                                 <p class="fontLato fontSize16 lineHeight24 cMorado">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non tortor et diam elementum gravida sit amet ac velit. Duis
-                                    non aliquam orci. Nullam finibus vulputate ipsum viverra condimentum.
+                                    Each project had one mission: evolution each continent by improving on sharing knowledge.    
                                 </p>
                                 <div class="clear"></div>
                                 <div class="clear"></div>
@@ -72,14 +71,14 @@
                     <!-- slide 3-->
                     <div>
                         <div class="row">
-                            <div class="col-md-5 col-md-push-7 col-sm-12">
+                            <div class="col-md-7 col-md-push-5 col-sm-12">
                                 <div class="clearFive "></div>
                                 <div class="clearFive "></div>
                                 <div class="clearFive hidden-lg hidden-md "></div>
                                 <div class="clearFive hidden-lg hidden-md "></div>
-                                <img alt="" class="imgPaso2 imgMobile" ng-src="{{vm.pathname}}img/internas/imagen_balon.png">
+                                <img alt="" class="prevI" ng-src="{{vm.pathname}}img/illus/evo2.png">
                             </div>
-                            <div class="col-md-7 col-md-pull-5  col-sm-12 textLeft">
+                            <div class="col-md-5 col-md-pull-7  col-sm-12 textLeft">
                                 <div class="clearFive hidden-sm hidden-xs"></div>
                                 <div class="clearFive hidden-sm hidden-xs"></div>
                                 <div class="clearFive hidden-sm hidden-xs"></div>
@@ -88,14 +87,13 @@
                                 <div class="clearFive "></div>
                                 <div class="textHome">
                                     <p class="fontAvenirNextLTProBold cMoradoOscuro  fontSize40 lineHeight50">
-                                        Camiseta de la sele
+                                            EVO - Evolution to DevOps
                                     </p>
                                 </div>
                                 <div class="clear"></div>
                                 <div class="clear"></div>
                                 <p class="fontLato fontSize16 lineHeight24 cMorado">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non tortor et diam elementum gravida sit amet ac velit. Duis
-                                    non aliquam orci. Nullam finibus vulputate ipsum viverra condimentum.
+                                    The eras of evolution were represented by totems in the world of EVO.  
                                 </p>
                                 <div class="clear"></div>
                                 <div class="clear"></div>
@@ -105,30 +103,29 @@
                     <!-- slide 4-->
                     <div>
                         <div class="row">
-                            <div class="col-md-5 col-md-push-7 col-sm-12">
+                            <div class="col-md-7 col-md-push-5 col-sm-12">
                                 <div class="clearFive "></div>
                                 <div class="clearFive "></div>
                                 <div class="clearFive hidden-lg hidden-md "></div>
                                 <div class="clearFive hidden-lg hidden-md "></div>
-                                <img alt="" class="imgPaso2 imgMobile" ng-src="{{vm.pathname}}img/internas/imagen_palacio_rojo.png">
+                                <img alt="" class="prevI" ng-src="{{vm.pathname}}img/illus/others.png">
                             </div>
-                            <div class="col-md-7 col-md-pull-5  col-sm-12 textLeft">
+                            <div class="col-md-5 col-md-pull-7  col-sm-12 textLeft">
                                 <div class="clearFive hidden-sm hidden-xs"></div>
                                 <div class="clearFive hidden-sm hidden-xs"></div>
                                 <div class="clearFive hidden-sm hidden-xs"></div>
                                 <div class="clearFive hidden-sm hidden-xs"></div>
                                 <div class="clearFive hidden-sm hidden-xs"></div>
-                                <div class="clearFive imgMobile"></div>
+                                <div class="clearFive "></div>
                                 <div class="textHome">
                                     <p class="fontAvenirNextLTProBold cMoradoOscuro  fontSize40 lineHeight50">
-                                        Un viaje a Rusia
+                                        Others
                                     </p>
                                 </div>
                                 <div class="clear"></div>
                                 <div class="clear"></div>
                                 <p class="fontLato fontSize16 lineHeight24 cMorado">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non tortor et diam elementum gravida sit amet ac velit. Duis
-                                    non aliquam orci. Nullam finibus vulputate ipsum viverra condimentum.
+                                    When you grow up drawing you learn how to draw for keeping growing up...  
                                 </p>
                                 <div class="clear"></div>
                                 <div class="clear"></div>
@@ -138,16 +135,6 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12 col-sm-12 tycMobile">
-                <div class="clear"></div>
-                <div class="clear"></div>
-                <p class="gtmRusiaTransvTermYCond fontAvenirNextLTPro fontSize16  cBlue1 link linkPurple" ng-click="vm.terms()">Términos y condiciones</p>
-                <div class="clearFive"></div>
-                <div class="clearFive"></div>
-            </div>
-        </div>
-
 
     </div>
 </div>
