--- a/dev/app/features/home/section2.view.html
+++ b/dev/app/features/home/section2.view.html
@@ -29,7 +29,7 @@
                                 <div class="clear"></div>
                                 <p class="fontLato fontSize16 lineHeight24 cMorado">
                                     A few months ago Bancolombia wanted to create a gamification concept for the employees based on DevOps knowledge distribution and then Evo came up :) 
-                                    <br> So each proyect has his own planet, each area of the project is a continent, and each team has his own crazy spaceship.   
+                                    <br> So each project has his own planet, each area of the project is a continent, and each team has his own crazy spaceship.   
                                 </p>
                                 <div class="clear"></div>
                                 <div class="clear"></div>
