--- a/dev/app/features/home/section0.view.html
+++ b/dev/app/features/home/section0.view.html
@@ -10,20 +10,19 @@
         <div class="row">
             <div class="col-md-5 col-sm-12">
                 <div class="logoHome"></div>
-                <!-- <img ng-src="{{vm.pathname}}img/home_logo.svg" alt=""> -->
             </div>
             <div class="col-md-6 col-sm-12 textLeft">
                 <div class="clearFive hidden-sm hidden-xs"></div>
                 <div class="clearFive hidden-sm hidden-xs"></div>
                 <div class="textHome">
                     <p class="fontAvenirNextLTProBold fontSize40 lineHeight50">
-                         Hi! This is Jose
+                         Hi, I'm Jose
                     </p>
                 </div>
                 <div class="clear"></div>
                 <div class="clear"></div>
                 <p class="fontLato fontSize16 lineHeight24 cBlue1">
-                     An electronic engineer who loves software, music, illustration, sports and astronomy. I currently work in Pragma S.A. and welcome to this part of my things :)
+                     an electronic engineer who loves software, sound and music, game development and illustration. I'm front-end leader at <a class="linkPragma" href="https://www.pragma.com.co/es/" target="_blank"> Pragma S.A. </a> and welcome to this part of my stuff <span class="cBlanco"> :)</span>
                 </p>
                 <div class="clear"></div>
                 <div class="clear"></div>
