--- a/dev/app/features/home/section2.view.html
+++ b/dev/app/features/home/section2.view.html
@@ -9,8 +9,6 @@
                             <div class="col-md-7 col-md-push-5 col-sm-12">
                                 <div class="clearFive "></div>
                                 <div class="clearFive "></div>
-                                <div class="clearFive hidden-lg hidden-md "></div>
-                                <div class="clearFive hidden-lg hidden-md "></div>
                                 <img alt="" class="prevI" ng-src="{{vm.pathname}}img/illus/evo1.png">
                             </div>
                             <div class="col-md-5 col-md-pull-7  col-sm-12 textLeft">
@@ -28,11 +26,10 @@
                                 <div class="clear"></div>
                                 <div class="clear"></div>
                                 <p class="fontLato fontSize16 lineHeight24 cMorado">
-                                    A few months ago Bancolombia wanted to create a gamification concept for the employees based on DevOps knowledge distribution and then Evo came up :) 
-                                    <br> So each project has his own planet, each area of the project is a continent, and each team has his own crazy spaceship.   
+                                    Bancolombia wanted to create a gamification concept for their employees based on sharing DevOps knowledge and then Evo came up :) 
                                 </p>
-                                <div class="clear"></div>
-                                <div class="clear"></div>
+                                <div class="clearFive"></div>
+                                <div class="clearFive"></div>
                             </div>
                         </div>
                     </div>
@@ -42,8 +39,6 @@
                             <div class="col-md-7 col-md-push-5 col-sm-12">
                                 <div class="clearFive "></div>
                                 <div class="clearFive "></div>
-                                <div class="clearFive hidden-lg hidden-md "></div>
-                                <div class="clearFive hidden-lg hidden-md "></div>
                                 <img alt="" class="prevI" ng-src="{{vm.pathname}}img/illus/evo3.png">
                             </div>
                             <div class="col-md-5 col-md-pull-7  col-sm-12 textLeft">
@@ -61,10 +56,10 @@
                                 <div class="clear"></div>
                                 <div class="clear"></div>
                                 <p class="fontLato fontSize16 lineHeight24 cMorado">
-                                    Each project had one mission: evolution each continent by improving on sharing knowledge.    
+                                    Each team (represented by a spaceship) has one mission: evolve each continent by improving on sharing knowledge.    
                                 </p>
-                                <div class="clear"></div>
-                                <div class="clear"></div>
+                                <div class="clearFive"></div>
+                                <div class="clearFive"></div>
                             </div>
                         </div>
                     </div>
@@ -74,8 +69,6 @@
                             <div class="col-md-7 col-md-push-5 col-sm-12">
                                 <div class="clearFive "></div>
                                 <div class="clearFive "></div>
-                                <div class="clearFive hidden-lg hidden-md "></div>
-                                <div class="clearFive hidden-lg hidden-md "></div>
                                 <img alt="" class="prevI" ng-src="{{vm.pathname}}img/illus/evo2.png">
                             </div>
                             <div class="col-md-5 col-md-pull-7  col-sm-12 textLeft">
@@ -93,10 +86,10 @@
                                 <div class="clear"></div>
                                 <div class="clear"></div>
                                 <p class="fontLato fontSize16 lineHeight24 cMorado">
-                                    The eras of evolution were represented by totems in the world of EVO.  
+                                    The eras of evolution are represented by totems in the world of EVO.  
                                 </p>
-                                <div class="clear"></div>
-                                <div class="clear"></div>
+                                <div class="clearFive"></div>
+                                <div class="clearFive"></div>
                             </div>
                         </div>
                     </div>
@@ -106,8 +99,6 @@
                             <div class="col-md-7 col-md-push-5 col-sm-12">
                                 <div class="clearFive "></div>
                                 <div class="clearFive "></div>
-                                <div class="clearFive hidden-lg hidden-md "></div>
-                                <div class="clearFive hidden-lg hidden-md "></div>
                                 <img alt="" class="prevI" ng-src="{{vm.pathname}}img/illus/others.png">
                             </div>
                             <div class="col-md-5 col-md-pull-7  col-sm-12 textLeft">
@@ -125,10 +116,10 @@
                                 <div class="clear"></div>
                                 <div class="clear"></div>
                                 <p class="fontLato fontSize16 lineHeight24 cMorado">
-                                    When you grow up drawing you learn how to draw for keeping growing up...  
+                                    I love illustrating so much. 
                                 </p>
-                                <div class="clear"></div>
-                                <div class="clear"></div>
+                                <div class="clearFive"></div>
+                                <div class="clearFive"></div>
                             </div>
                         </div>
                     </div>
