--- a/dev/app/features/partialview/menu.view.html
+++ b/dev/app/features/partialview/menu.view.html
@@ -10,7 +10,7 @@
             </li>
             <li  ng-click="vm.menu(1)" id="como">
                 <div class="iconMenu"></div>
-                <p>Games</p>
+                <p>Game dev</p>
             </li>
             <li ng-click="vm.menu(2)" id="premios">
                 <div class="iconMenu"></div>
